# dedup

./: README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
dedupsnap/: adaptive_switcher.py  cas.py  chunker.py  cli.py  cuckoo_filter.py  db.py  hasher.py  merkle.py  mmr.py  repo.py  restore.py  scanner.py
frontend/: app.py
my/.dedupsnap/: metadata.db
tests/: test_dedupe.py  test_roundtrip.py
